--- a/www/css/index.css
+++ b/www/css/index.css
@@ -127,3 +127,42 @@ article{
     padding: 10px 30px;
     margin-bottom: 10px;
 }*/
+
+.bigimg{
+    width: 100%;
+    height: 12em;
+    margin: auto;
+    -webkit-box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
+    -moz-box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
+    box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
+}
+.smallimg{
+    width: 70%;
+    height: 2.5em;
+    margin: auto;
+/*    -webkit-box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
+    -moz-box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
+    box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);*/
+}
+.NotificationAlertON{
+    -webkit-box-shadow: -1px 4px 19px 2px rgba(240,26,26,1);
+    -moz-box-shadow: -1px 4px 19px 2px rgba(240,26,26,1);
+    box-shadow: -1px 4px 19px 2px rgba(240,26,26,1);
+}
+.SSP{
+    font-family: "Source Sans Pro";
+}
+label > h3{
+    font-family: "Source Sans Pro";
+    font-size: 1.1em;
+}
+.backtext{
+    color: rgba(93, 83, 87, 0.6);
+    font-size: 1.1em;
+    font-style: normal;
+    font-stretch: semi-expanded;
+    text-align: center;
+}
+.displayhidden{
+    display: none;
+}
