--- a/www/css/index.css
+++ b/www/css/index.css
@@ -140,9 +140,9 @@ article{
     width: 70%;
     height: 2.5em;
     margin: auto;
-/*    -webkit-box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
-    -moz-box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
-    box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);*/
+    /*    -webkit-box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
+        -moz-box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
+        box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);*/
 }
 .NotificationAlertON{
     -webkit-box-shadow: -1px 4px 19px 2px rgba(240,26,26,1);
@@ -165,4 +165,18 @@ label > h3{
 }
 .displayhidden{
     display: none;
+}
+.circle {
+    display: block;
+    width: 150px;
+    height: 150px;
+    margin: 1em auto;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    -webkit-border-radius: 99em;
+    -moz-border-radius: 99em;
+    border-radius: 99em;
+    border: 5px solid #eee;
+    box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
