--- a/www/css/index.css
+++ b/www/css/index.css
@@ -132,9 +132,10 @@ article{
     width: 100%;
     height: 12em;
     margin: auto;
-    -webkit-box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
+/*    -webkit-box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
     -moz-box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
-    box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);
+    box-shadow: 0px -2px 15px 5px rgba(0,0,0,0.12);*/
+    border : none;
 }
 .smallimg{
     width: 70%;
@@ -179,4 +180,7 @@ label > h3{
     border-radius: 99em;
     border: 5px solid #eee;
     box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
+}
+.inlinebtn{
+    width: 20%;
 }
