Popups added on matches you are invited to, more CSS

--- a/www/css/CSSFIRSTVERSION.css
+++ b/www/css/CSSFIRSTVERSION.css
@@ -297,8 +297,8 @@ html .ui-bar-a .ui-btn:visited,
 html .ui-body-a .ui-btn:visited,
 html body .ui-group-theme-a .ui-btn:visited,
 html head + body .ui-btn.ui-btn-a:visited {
-	background-color: #7839f9 /*{a-bup-background-color}*/;
-	border-color: #421f88 /*{a-bup-border}*/;
+	background-color: #f95b58 /*{a-bup-background-color}*/;
+	border-color: #883230 /*{a-bup-border}*/;
 	color: #ffffff /*{a-bup-color}*/;
 	text-shadow: 0 /*{a-bup-shadow-x}*/ 0 /*{a-bup-shadow-y}*/ 0 /*{a-bup-shadow-radius}*/ #444444 /*{a-bup-shadow-color}*/;
 }
@@ -308,8 +308,8 @@ html .ui-bar-a .ui-btn:hover,
 html .ui-body-a .ui-btn:hover,
 html body .ui-group-theme-a .ui-btn:hover,
 html head + body .ui-btn.ui-btn-a:hover {
-	background-color: #8a41FF /*{a-bhover-background-color}*/;
-	border-color: #4b238c /*{a-bhover-border}*/;
+	background-color: #FF6865 /*{a-bhover-background-color}*/;
+	border-color: #8c3937 /*{a-bhover-border}*/;
 	color: #ffffff /*{a-bhover-color}*/;
 	text-shadow: 0 /*{a-bhover-shadow-x}*/ 1px /*{a-bhover-shadow-y}*/ 0 /*{a-bhover-shadow-radius}*/ #444444 /*{a-bhover-shadow-color}*/;
 }
@@ -319,8 +319,8 @@ html .ui-bar-a .ui-btn:active,
 html .ui-body-a .ui-btn:active,
 html body .ui-group-theme-a .ui-btn:active,
 html head + body .ui-btn.ui-btn-a:active {
-	background-color: #8a41FF /*{a-bdown-background-color}*/;
-	border-color: #4b238c /*{a-bdown-border}*/;
+	background-color: #FF6865 /*{a-bdown-background-color}*/;
+	border-color: #8c3937 /*{a-bdown-border}*/;
 	color: #000000 /*{a-bdown-color}*/;
 	text-shadow: 0 /*{a-bdown-shadow-x}*/ 1px /*{a-bdown-shadow-y}*/ 0 /*{a-bdown-shadow-radius}*/ #eeeeee /*{a-bdown-shadow-color}*/;
 }
