--- a/www/css/index.css
+++ b/www/css/index.css
@@ -181,6 +181,6 @@ label > h3{
     border: 5px solid #eee;
     box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
-.inlinebtn{
-    width: 20%;
+.Cpanel{
+    display: inline-block;
 }
