--- a/www/css/CSSFIRSTVERSION.css
+++ b/www/css/CSSFIRSTVERSION.css
@@ -24,7 +24,7 @@ button,
 .ui-btn {
 	font-size: 1em;
 	line-height: 1.3;
-	   font-family: Source Sans Pro, sans-serif /*{global-font-family}*/;
+	    font-family: Source Sans Pro, sans-serif /*{global-font-family}*/;
 }
 legend,
 .ui-input-text input,
@@ -1038,6 +1038,170 @@ html head + body .ui-body-e.ui-focus {
 
 
 
+
+
+/* F
+-----------------------------------------------------------------------------------------------------------*/
+/* Bar: Toolbars, dividers, slider track */
+.ui-bar-f,
+.ui-page-theme-f .ui-bar-inherit,
+html .ui-bar-f .ui-bar-inherit,
+html .ui-body-f .ui-bar-inherit,
+html body .ui-group-theme-f .ui-bar-inherit {
+	background-color: #e9e9e9 /*{f-bar-background-color}*/;
+	border-color: #dddddd /*{f-bar-border}*/;
+	color: #333333 /*{f-bar-color}*/;
+	text-shadow: 0 /*{f-bar-shadow-x}*/ 1px /*{f-bar-shadow-y}*/ 0 /*{f-bar-shadow-radius}*/ #eeeeee /*{f-bar-shadow-color}*/;
+	font-weight: bold;
+}
+.ui-bar-f {
+	border-width: 1px;
+	border-style: solid;
+}
+/* Page and overlay */
+.ui-overlay-f,
+.ui-page-theme-f,
+.ui-page-theme-f .ui-panel-wrapper {
+	background-color: #f9f9f9 /*{f-page-background-color}*/;
+	border-color: #bbbbbb /*{f-page-border}*/;
+	color: #333333 /*{f-page-color}*/;
+	text-shadow: 0 /*{f-page-shadow-x}*/ 1px /*{f-page-shadow-y}*/ 0 /*{f-page-shadow-radius}*/ #f3f3f3 /*{f-page-shadow-color}*/;
+}
+/* Body: Read-only lists, text inputs, collapsible content */
+.ui-body-f,
+.ui-page-theme-f .ui-body-inherit,
+html .ui-bar-f .ui-body-inherit,
+html .ui-body-f .ui-body-inherit,
+html body .ui-group-theme-f .ui-body-inherit,
+html .ui-panel-page-container-f {
+	background-color: #ffffff /*{f-body-background-color}*/;
+	border-color: #dddddd /*{f-body-border}*/;
+	color: #333333 /*{f-body-color}*/;
+	text-shadow: 0 /*{f-body-shadow-x}*/ 1px /*{f-body-shadow-y}*/ 0 /*{f-body-shadow-radius}*/ #f3f3f3 /*{f-body-shadow-color}*/;
+}
+.ui-body-f {
+	border-width: 1px;
+	border-style: solid;
+}
+/* Links */
+.ui-page-theme-f a,
+html .ui-bar-f a,
+html .ui-body-f a,
+html body .ui-group-theme-f a {
+	color: #3388cc /*{f-link-color}*/;
+	font-weight: bold;
+}
+.ui-page-theme-f a:visited,
+html .ui-bar-f a:visited,
+html .ui-body-f a:visited,
+html body .ui-group-theme-f a:visited {
+    color: #3388cc /*{f-link-visited}*/;
+}
+.ui-page-theme-f a:hover,
+html .ui-bar-f a:hover,
+html .ui-body-f a:hover,
+html body .ui-group-theme-f a:hover {
+	color: #005599 /*{f-link-hover}*/;
+}
+.ui-page-theme-f a:active,
+html .ui-bar-f a:active,
+html .ui-body-f a:active,
+html body .ui-group-theme-f a:active {
+	color: #005599 /*{f-link-active}*/;
+}
+/* Button up */
+.ui-page-theme-f .ui-btn,
+html .ui-bar-f .ui-btn,
+html .ui-body-f .ui-btn,
+html body .ui-group-theme-f .ui-btn,
+html head + body .ui-btn.ui-btn-f,
+/* Button visited */
+.ui-page-theme-f .ui-btn:visited,
+html .ui-bar-f .ui-btn:visited,
+html .ui-body-f .ui-btn:visited,
+html body .ui-group-theme-f .ui-btn:visited,
+html head + body .ui-btn.ui-btn-f:visited {
+	background-color: #e6e6e6 /*{f-bup-background-color}*/;
+	border-color: #7e7e7e /*{f-bup-border}*/;
+	color: #000000 /*{f-bup-color}*/;
+	text-shadow: 0 /*{f-bup-shadow-x}*/ 1px /*{f-bup-shadow-y}*/ 0 /*{f-bup-shadow-radius}*/ #eeeeee /*{f-bup-shadow-color}*/;
+}
+/* Button hover */
+.ui-page-theme-f .ui-btn:hover,
+html .ui-bar-f .ui-btn:hover,
+html .ui-body-f .ui-btn:hover,
+html body .ui-group-theme-f .ui-btn:hover,
+html head + body .ui-btn.ui-btn-f:hover {
+	background-color: #FFFFFF /*{f-bhover-background-color}*/;
+	border-color: #8c8c8c /*{f-bhover-border}*/;
+	color: #000000 /*{f-bhover-color}*/;
+	text-shadow: 0 /*{f-bhover-shadow-x}*/ 1px /*{f-bhover-shadow-y}*/ 0 /*{f-bhover-shadow-radius}*/ #eeeeee /*{f-bhover-shadow-color}*/;
+}
+/* Button down */
+.ui-page-theme-f .ui-btn:active,
+html .ui-bar-f .ui-btn:active,
+html .ui-body-f .ui-btn:active,
+html body .ui-group-theme-f .ui-btn:active,
+html head + body .ui-btn.ui-btn-f:active {
+	background-color: #FFFFFF /*{f-bdown-background-color}*/;
+	border-color: #8c8c8c /*{f-bdown-border}*/;
+	color: #000000 /*{f-bdown-color}*/;
+	text-shadow: 0 /*{f-bdown-shadow-x}*/ 1px /*{f-bdown-shadow-y}*/ 0 /*{f-bdown-shadow-radius}*/ #eeeeee /*{f-bdown-shadow-color}*/;
+}
+/* Active button */
+.ui-page-theme-f .ui-btn.ui-btn-active,
+html .ui-bar-f .ui-btn.ui-btn-active,
+html .ui-body-f .ui-btn.ui-btn-active,
+html body .ui-group-theme-f .ui-btn.ui-btn-active,
+html head + body .ui-btn.ui-btn-f.ui-btn-active,
+/* Active checkbox icon */
+.ui-page-theme-f .ui-checkbox-on:after,
+html .ui-bar-f .ui-checkbox-on:after,
+html .ui-body-f .ui-checkbox-on:after,
+html body .ui-group-theme-f .ui-checkbox-on:after,
+.ui-btn.ui-checkbox-on.ui-btn-f:after,
+/* Active flipswitch background */
+.ui-page-theme-f .ui-flipswitch-active,
+html .ui-bar-f .ui-flipswitch-active,
+html .ui-body-f .ui-flipswitch-active,
+html body .ui-group-theme-f .ui-flipswitch-active,
+html body .ui-flipswitch.ui-bar-f.ui-flipswitch-active,
+/* Active slider track */
+.ui-page-theme-f .ui-slider-track .ui-btn-active,
+html .ui-bar-f .ui-slider-track .ui-btn-active,
+html .ui-body-f .ui-slider-track .ui-btn-active,
+html body .ui-group-theme-f .ui-slider-track .ui-btn-active,
+html body div.ui-slider-track.ui-body-f .ui-btn-active {
+	background-color: #3388cc /*{f-active-background-color}*/;
+	border-color: #3388cc /*{f-active-border}*/;
+	color: #ffffff /*{f-active-color}*/;
+	text-shadow: 0 /*{f-active-shadow-x}*/ 1px /*{f-active-shadow-y}*/ 0 /*{f-active-shadow-radius}*/ #005599 /*{f-active-shadow-color}*/;
+}
+/* Active radio button icon */
+.ui-page-theme-f .ui-radio-on:after,
+html .ui-bar-f .ui-radio-on:after,
+html .ui-body-f .ui-radio-on:after,
+html body .ui-group-theme-f .ui-radio-on:after,
+.ui-btn.ui-radio-on.ui-btn-f:after {
+	border-color: #3388cc /*{f-active-background-color}*/;
+}
+/* Focus */
+.ui-page-theme-f .ui-btn:focus,
+html .ui-bar-f .ui-btn:focus,
+html .ui-body-f .ui-btn:focus,
+html body .ui-group-theme-f .ui-btn:focus,
+html head + body .ui-btn.ui-btn-f:focus,
+/* Focus buttons and text inputs with div wrap */
+.ui-page-theme-f .ui-focus,
+html .ui-bar-f .ui-focus,
+html .ui-body-f .ui-focus,
+html body .ui-group-theme-f .ui-focus,
+html head + body .ui-btn-f.ui-focus,
+html head + body .ui-body-f.ui-focus {
+	-webkit-box-shadow: 0 0 12px #3388cc /*{f-active-background-color}*/;
+	-moz-box-shadow: 0 0 12px #3388cc /*{f-active-background-color}*/;
+	box-shadow: 0 0 12px #3388cc /*{f-active-background-color}*/;
+}
 
 
 /* Structure */
