--- a/www/css/index.css
+++ b/www/css/index.css
@@ -184,3 +184,26 @@ label > h3{
 .Cpanel{
     display: inline-block;
 }
+.miniInfo{
+    background-image: url("/www/img/BG.jpg");
+    display: inline-block;
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 30%;
+}
+.miniimg{
+    display: block;
+    width: 80px;
+    height: 80px;
+    margin: 1em auto;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    -webkit-border-radius: 99em;
+    -moz-border-radius: 99em;
+    border-radius: 99em;
+    border: 5px solid #eee;
+    box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
+}
