--- a/www/css/CSSFIRSTVERSION.css
+++ b/www/css/CSSFIRSTVERSION.css
@@ -24,7 +24,7 @@ button,
 .ui-btn {
 	font-size: 1em;
 	line-height: 1.3;
-	    font-family: Source Sans Pro, sans-serif /*{global-font-family}*/;
+	 font-family: Source Sans Pro, sans-serif /*{global-font-family}*/;
 }
 legend,
 .ui-input-text input,
@@ -87,8 +87,8 @@ label.ui-btn {
 -----------------------------------------------------------------------------------------------------------*/
 /* Class ui-btn-corner-all deprecated in 1.4 */
 .ui-corner-all {
-	-webkit-border-radius: 0.4em /*{global-radii-blocks}*/;
-	border-radius: 0.4em /*{global-radii-blocks}*/;
+	-webkit-border-radius: 0.1em /*{global-radii-blocks}*/;
+	border-radius: 0.1em /*{global-radii-blocks}*/;
 }
 /* Buttons */
 .ui-btn-corner-all,
@@ -99,8 +99,8 @@ label.ui-btn {
 .ui-flipswitch.ui-corner-all,
 /* Count bubble */
 .ui-li-count {
-	-webkit-border-radius: 0.4em /*{global-radii-buttons}*/;
-	border-radius: 0.4em /*{global-radii-buttons}*/;
+	-webkit-border-radius: 0.1em /*{global-radii-buttons}*/;
+	border-radius: 0.1em /*{global-radii-buttons}*/;
 }
 /* Icon-only buttons */
 .ui-btn-icon-notext.ui-btn-corner-all,
@@ -116,10 +116,10 @@ label.ui-btn {
 }
 /* Popup arrow */
 .ui-popup.ui-corner-all > .ui-popup-arrow-guide {
-	left: 0.4em /*{global-radii-blocks}*/;
-	right: 0.4em /*{global-radii-blocks}*/;
-	top: 0.4em /*{global-radii-blocks}*/;
-	bottom: 0.4em /*{global-radii-blocks}*/;
+	left: 0.1em /*{global-radii-blocks}*/;
+	right: 0.1em /*{global-radii-blocks}*/;
+	top: 0.1em /*{global-radii-blocks}*/;
+	bottom: 0.1em /*{global-radii-blocks}*/;
 }
 /* Shadow
 -----------------------------------------------------------------------------------------------------------*/
@@ -386,8 +386,8 @@ html head + body .ui-body-a.ui-focus {
 html .ui-bar-b .ui-bar-inherit,
 html .ui-body-b .ui-bar-inherit,
 html body .ui-group-theme-b .ui-bar-inherit {
-	background-color: #f64c65 /*{b-bar-background-color}*/;
-	border-color: #872937 /*{b-bar-border}*/;
+	background-color: #E50B45 /*{b-bar-background-color}*/;
+	border-color: #E50B45 /*{b-bar-border}*/;
 	color: #ffffff /*{b-bar-color}*/;
 	text-shadow: 0 /*{b-bar-shadow-x}*/  /*{b-bar-shadow-y}*/ 0 /*{b-bar-shadow-radius}*/ #444444 /*{b-bar-shadow-color}*/;
 	font-weight: bold;
@@ -412,8 +412,8 @@ html .ui-bar-b .ui-body-inherit,
 html .ui-body-b .ui-body-inherit,
 html body .ui-group-theme-b .ui-body-inherit,
 html .ui-panel-page-container-b {
-	background-color: #fee1e5 /*{b-body-background-color}*/;
-	border-color: #8b7b7d /*{b-body-border}*/;
+	background-color: #F2B098 /*{b-body-background-color}*/;
+	border-color: #F2B098 /*{b-body-border}*/;
 	color: #000000 /*{b-body-color}*/;
 	text-shadow: 0 /*{b-body-shadow-x}*/  /*{b-body-shadow-y}*/ 0 /*{b-body-shadow-radius}*/ #b21515 /*{b-body-shadow-color}*/;
 }
@@ -459,10 +459,10 @@ html .ui-bar-b .ui-btn:visited,
 html .ui-body-b .ui-btn:visited,
 html body .ui-group-theme-b .ui-btn:visited,
 html head + body .ui-btn.ui-btn-b:visited {
-	background-color: #c561f5 /*{b-bup-background-color}*/;
-	border-color: #6c3586 /*{b-bup-border}*/;
-	color: #000000 /*{b-bup-color}*/;
-	text-shadow: 0 /*{b-bup-shadow-x}*/ 0.2px /*{b-bup-shadow-y}*/ 0 /*{b-bup-shadow-radius}*/ #050505 /*{b-bup-shadow-color}*/;
+	background-color: #28223C /*{b-bup-background-color}*/;
+	border-color: #28223C /*{b-bup-border}*/;
+	color: #ffffff /*{b-bup-color}*/;
+	text-shadow: 0 /*{b-bup-shadow-x}*/ 0.2px /*{b-bup-shadow-y}*/ 0 /*{b-bup-shadow-radius}*/ #444444 /*{b-bup-shadow-color}*/;
 }
 /* Button hover */
 .ui-page-theme-b .ui-btn:hover,
@@ -470,10 +470,10 @@ html .ui-bar-b .ui-btn:hover,
 html .ui-body-b .ui-btn:hover,
 html body .ui-group-theme-b .ui-btn:hover,
 html head + body .ui-btn.ui-btn-b:hover {
-	background-color: #e26fFF /*{b-bhover-background-color}*/;
-	border-color: #7c3d8c /*{b-bhover-border}*/;
-	color: #000000 /*{b-bhover-color}*/;
-	text-shadow: 0 /*{b-bhover-shadow-x}*/ 5 /*{b-bhover-shadow-y}*/ 0 /*{b-bhover-shadow-radius}*/ #eeeeee /*{b-bhover-shadow-color}*/;
+	background-color: #2a319c /*{b-bhover-background-color}*/;
+	border-color: #3a44da /*{b-bhover-border}*/;
+	color: #ffffff /*{b-bhover-color}*/;
+	text-shadow: 0 /*{b-bhover-shadow-x}*/ 5 /*{b-bhover-shadow-y}*/ 0 /*{b-bhover-shadow-radius}*/ #444444 /*{b-bhover-shadow-color}*/;
 }
 /* Button down */
 .ui-page-theme-b .ui-btn:active,
@@ -481,10 +481,10 @@ html .ui-bar-b .ui-btn:active,
 html .ui-body-b .ui-btn:active,
 html body .ui-group-theme-b .ui-btn:active,
 html head + body .ui-btn.ui-btn-b:active {
-	background-color: #e26fFF /*{b-bdown-background-color}*/;
-	border-color: #7c3d8c /*{b-bdown-border}*/;
-	color: #000000 /*{b-bdown-color}*/;
-	text-shadow: 0 /*{b-bdown-shadow-x}*/ 2 /*{b-bdown-shadow-y}*/ 0 /*{b-bdown-shadow-radius}*/ #404ef7 /*{b-bdown-shadow-color}*/;
+	background-color: #2a319c /*{b-bdown-background-color}*/;
+	border-color: #3a44da /*{b-bdown-border}*/;
+	color: #ffffff /*{b-bdown-color}*/;
+	text-shadow: 0 /*{b-bdown-shadow-x}*/ 2 /*{b-bdown-shadow-y}*/ 0 /*{b-bdown-shadow-radius}*/ #444444 /*{b-bdown-shadow-color}*/;
 }
 /* Active button */
 .ui-page-theme-b .ui-btn.ui-btn-active,
@@ -870,8 +870,6 @@ html head + body .ui-body-d.ui-focus {
 }
 
 
-
-
 /* E
 -----------------------------------------------------------------------------------------------------------*/
 /* Bar: Toolbars, dividers, slider track */
@@ -1036,10 +1034,6 @@ html head + body .ui-body-e.ui-focus {
 }
 
 
-
-
-
-
 /* F
 -----------------------------------------------------------------------------------------------------------*/
 /* Bar: Toolbars, dividers, slider track */
@@ -1173,7 +1167,7 @@ html .ui-body-f .ui-slider-track .ui-btn-active,
 html body .ui-group-theme-f .ui-slider-track .ui-btn-active,
 html body div.ui-slider-track.ui-body-f .ui-btn-active {
 	background-color: #3388cc /*{f-active-background-color}*/;
-	border-color: #3388cc /*{f-active-border}*/;
+	border-color: #1c4a70 /*{f-active-border}*/;
 	color: #ffffff /*{f-active-color}*/;
 	text-shadow: 0 /*{f-active-shadow-x}*/ 1px /*{f-active-shadow-y}*/ 0 /*{f-active-shadow-radius}*/ #005599 /*{f-active-shadow-color}*/;
 }
