--- a/www/css/index.css
+++ b/www/css/index.css
@@ -185,19 +185,19 @@ label > h3{
     display: inline-block;
 }
 .miniInfo{
-    background-image: url("/www/img/BG.jpg");
-    display: inline-block;
-    position: absolute;
+    display: inline-flex;
     top:0;
     left:0;
-    width: 100%;
-    height: 30%;
+    min-width: 100%;
+    min-height: 20%;
+    background-image: url("img/BG.jpg");
+    background-size:100%;
 }
 .miniimg{
     display: block;
     width: 80px;
     height: 80px;
-    margin: 1em auto;
+    margin: 0.3em;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -206,4 +206,5 @@ label > h3{
     border-radius: 99em;
     border: 5px solid #eee;
     box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
+
 }
