--- a/www/css/index.css
+++ b/www/css/index.css
@@ -185,13 +185,15 @@ label > h3{
     display: inline-block;
 }
 .miniInfo{
+    position: relative;
     display: inline-flex;
     top:0;
     left:0;
     min-width: 100%;
     min-height: 20%;
     background-image: url("img/BG.jpg");
-    background-size:100%;
+    background-size: cover;
+    margin:0;
 }
 .miniimg{
     display: block;
